// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`o1.json 1`] = `
====================================options=====================================
alignObjectProperties: true
parsers: ["json", "json-stringify"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  "keyasdf": 3
}

================================================================================
`;

exports[`o1.json 2`] = `
====================================options=====================================
alignObjectProperties: true
parsers: ["json5"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{
  2:3,
  "k-2":2,
  keyasdf:3
}

=====================================output=====================================
{
  2: 3,
  "k-2": 2,
  keyasdf: 3
}

================================================================================
`;
